[package]
name = "attack"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["blocking", "multipart", "cookies", "json"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
