[package]
name = "attack"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "group_26"
path = "bin/group_26.rs"

[[bin]]
name = "group_8"
path = "bin/group_8.rs"


[dependencies]
eyre = "0.6.12"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["blocking", "multipart", "cookies", "json"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19", features = ["env-filter"]}
serde_json = "1.0"